fix minor ordering and layout bug

--- a/msgvis/static/tweet_coder_viz.less
+++ b/msgvis/static/tweet_coder_viz.less
@@ -308,6 +308,18 @@ h3 {
 
     &.hovered {
         background: @item-background-color-hover;
+
+        .item {
+            font-size: 18px;
+            margin: 20px;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
     }
 
     .content {
